# mail-skill

./: .gitignore  README.md  RELEASE_NOTE.md  SKILL.md  build.sh  example.config.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  STACK.md
.planning/phases/01-code-quality-foundation/: 01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VALIDATION.md  02-PLAN.md  02-SUMMARY.md  03-PLAN.md  03-SUMMARY.md  04-PLAN.md  04-SUMMARY.md  05-PLAN.md  06-PLAN.md
.planning/phases/02-attachment-preview-service/: 02-01-PLAN.md  02-02-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-natural-language-search/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-smart-classification/: 04-00-PLAN.md  04-00-SUMMARY.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: classification_rules.yaml
references/: MEMORY.md  SIGNATURE.md
references/templates/: email_table.md.j2  email_theme.html.j2  thread.md.j2
scripts/: mail_cli.py
scripts/mail_manager/: classifier.py  client.py  config_db.py  config_manager.py  config_server.py  date_parser.py  db.py  detail.py  errors.py  models.py  query_parser.py  reply_assistant.py  rules.py  server.py  summary_report.py  templates.py  thread_manager.py
tests/: conftest.py  test_attachment_parser.py  test_classifier.py  test_cli.py  test_client.py  test_date_parser.py  test_db.py  test_detail.py  test_errors.py  test_llm_client.py  test_query_parser.py  test_reply_assistant.py  test_server.py  test_summary_report.py  test_templates.py  test_thread_manager.py
(+53 files in other folders)
